# pupil

./: .gitignore  CMakeLists.txt
core/inc/core/: AudioBuffer.h  IAudioBuffer.h
core/mocks/inc/: AudioBufferMock.h
core/src/: AudioBuffer.cpp  InterpolatingValue.cpp
seele/: CMakeLists.txt
seele/inc/: MiniSlider.h  PluginProcessor.h  SeeleSlider.h  SummonToggle.h  TextBox.h  UiConstants.h
seele/seeleCore/: CMakeLists.txt
seele/seeleCore/inc/seeleCore/: Analysis.h  CircularBuffer.h  Config.h  DelayProcessor.h  Engine.h  Factory.h  IAnalysis.h  IDelayProcessor.h  ISynthesis.h  PitchShifter.h  Synthesis.h
seele/seeleCore/mocks/inc/: AnalysisMock.h  DelayProcessorMock.h
seele/seeleCore/src/: Analysis.cpp  CircularBuffer.cpp  DelayProcessor.cpp  Engine.cpp  Factory.cpp  GainProcessor.cpp  PitchShifter.cpp  PitchShifterManager.cpp  Synthesis.cpp
seele/seeleCore/tests/src/: EngineTestCase.cpp  FactoryTestCase.cpp  SynthesisTestCase.cpp
seele/src/: MainComponent.cpp  MemberArea.cpp  Oscilloscope.cpp  PluginProcessor.cpp
toolchains/: macToolchain.cmake  windowsToolchain.cmake
